# gf3d

./: .gitignore  CMakeLists.txt  README.md
include/: gf3d_camera.h  gf3d_collide.h  gf3d_commands.h  gf3d_matrix.h  gf3d_mesh.h  gf3d_model.h  gf3d_obj_load.h  gf3d_pipeline.h  gf3d_texture.h  gf3d_types.h  gf3d_uniforms.h  gf3d_vgraphics.h
shaders/: default.frag  default.vert  default.vert.spv  frag.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  vert.spv  voxel.frag  voxel.frag.spv  voxel.geom  voxel.geom.spv  voxel.vert  voxel.vert.spv
src/: gf3d_camera.c  gf3d_collide.c  gf3d_commands.c  gf3d_extensions.c  gf3d_mesh.c  gf3d_model.c  gf3d_obj_load.c  gf3d_pipeline.c  gf3d_texture.c  gf3d_uniforms.c  gf3d_validation.c  gf3d_vgraphics.c  gf3d_vqueues.c
src/game/: block.c  block.h  chunk.c  chunk.h  coords.c  coords.h  game.c  game.h  noise.c  noise.h  raytrace.c  raytrace.h  world.c  world.h
src/game/collisions/: world.c  world.h
src/game/entity/: entity.c  entity.h  manager.c  manager.h
src/game/entity/definitions/: agumon.c  agumon.h  badguy.c  badguy.h  player.c  player.h  ui.c  ui.h  world.c  world.h
src/game/rendering/: ui.c  ui.h  world.c  world.h
src/game/shapes/: box.c  box.h
src/game/structures/: bprune.c  bprune.h  mdarray.h
